<resources>
    <string name="app_name">Food Safari</string>

    <string name="enter_username">User Name</string>
    <string name="enter_password">password</string>
    <string name="or_display">or</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="create_acc">create account</string>
    <string name="rememberme">Remember Me</string>


    <string name="title_activity_navigation_home">NavigationHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Restaurants</string>
    <string name="menu_gallery">Account</string>
    <string name="menu_slideshow">Chat with customer service</string>
    <string name="menu_tools">Orders Placed</string>
    <string name="menu_share">About us</string>
    <string name="logout">Sign out</string>
    <string name="menu_send">Cart</string>

    <string name="err_name">Please enter a valid Name</string>
    <string name="err_tel">Enter Valid 10 digit phone number</string>
    <string name="err_email">Enter Correct email address</string>
    <string name="err_password">Your password must be have at least 8 characters long with\n1 uppercase
        &amp; 1 lowercase character\n1 special character\n1 number</string>
    <string name="err_password_confirmation">Password and confirm password should match</string>


    <string name="shipment_prompt">Select Pickup/In-store/Delivery</string>
    <string name="validStr">[a-zA-Z\\s]+</string>
    <string-array name="shipment_mode">
        <item>Pickup</item>
        <item>In-store</item>
        <item>Delivery</item>
    </string-array>


</resources>
