<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/account"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/restaurant"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/menu_send" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/delete"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/chat"
                android:title="@string/menu_slideshow" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
