<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_restaurant">

    <fragment
        android:id="@+id/nav_restaurant"
        android:name="com.example.food_safari.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.food_safari.ui.account.AccountFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_account" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.food_safari.ui.chat.ChatFragment"
        android:label="@string/menu_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.food_safari.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_payment" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.food_safari.ui.aboutus.AboutusFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/activity_about_us" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.food_safari.ui.cart.CartFragment"
        android:label="@string/menu_send" />
</navigation>